[package]
name = "alpha-rra"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adjustp = "0.1.4"
anyhow = "1.0.62"
hashbrown = "0.12.3"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rayon = "1.5.3"
statrs = "0.16.0"
