[package]
name = "alpha-rra"
version = "0.2.1"
edition = "2021"
description = "An implementation of the Alpha-RRA algorithm for p-value aggregation on groups of genes"
license = "MIT"
documentation = "https://docs.rs/alpha-rra"
repository = "https://github.com/noamteyssier/alpha-rra"
keywords = ["CRISPR", "bioinformatics", "sequencing", "sgRNA"]
categories = ["science"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adjustp = "0.1.6"
anyhow = "1.0.86"
hashbrown = "0.14.5"
ndarray = "0.15.6"
ndarray-rand = "0.14.0"
rand_chacha = "0.3.1"
rayon = "1.10.0"
statrs = "0.17.1"
